<resources>
    <string name="app_name">Matka</string>
    <string name="game_1">Shakti</string>
    <string name="game_2">Bhothnath</string>
    <string name="game_3">Worly</string>
    <string name="admin">\@Admin</string>
    <string name="txt_admin_login">Admin Login</string>
    <string name="txt_enter_password">Password</string>
    <string name="txt_date">Date</string>
    <string name="login">Login</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="txt_single">Single</string>
    <string name="txt_patti">Patti</string>
    <string name="submit">Submit</string>
</resources>
