<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/cvGameShakti"
            style="@style/cardStyle"
            android:layout_weight="1"
            android:text="@string/game_1"
            app:cardBackgroundColor="@color/blue_grey_700">

            <android.support.v7.widget.AppCompatTextView
                style="@style/textviewStyle"
                android:text="@string/game_1" />
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/cvGameBN"
            style="@style/cardStyle"
            android:layout_weight="1"
            android:text="@string/game_2"
            app:cardBackgroundColor="@color/red_700">

            <android.support.v7.widget.AppCompatTextView
                style="@style/textviewStyle"
                android:text="@string/game_2" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cvGameWorly"
            style="@style/cardStyle"
            android:layout_weight="1"
            android:text="@string/game_3"
            app:cardBackgroundColor="@color/teal_700">

            <android.support.v7.widget.AppCompatTextView
                style="@style/textviewStyle"
                android:text="@string/game_3" />
        </android.support.v7.widget.CardView>
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:padding="8dp"
        android:text="@string/admin" />

</RelativeLayout>