<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/llType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_for_submit_result">

            <RelativeLayout
                android:id="@+id/rlToggle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvToggleShakti"
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/togglebackground_active_left"
                    android:gravity="center_horizontal"
                    android:padding="3sp"
                    android:text="@string/game_1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/caption" />

                <TextView
                    android:id="@+id/tvToggleBhotnath"
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tvToggleShakti"
                    android:background="@drawable/togglebackground_normal_center"
                    android:gravity="center_horizontal"
                    android:padding="3sp"
                    android:text="@string/game_2"
                    android:textColor="@color/black_87"
                    android:textSize="@dimen/caption" />


                <TextView
                    android:id="@+id/tvToggleWorly"
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tvToggleBhotnath"
                    android:background="@drawable/togglebackground_normal_right"
                    android:gravity="center_horizontal"
                    android:padding="3sp"
                    android:text="@string/game_3"
                    android:textColor="@color/black_87"
                    android:textSize="@dimen/caption" />


            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_for_submit_result">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvToggleOpen"
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/togglebackground_active_left"
                    android:gravity="center_horizontal"
                    android:padding="3sp"
                    android:text="@string/open"
                    android:textColor="@color/white"
                    android:textSize="@dimen/caption" />

                <TextView
                    android:id="@+id/tvToggleClose"
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tvToggleOpen"
                    android:background="@drawable/togglebackground_normal_right"
                    android:gravity="center_horizontal"
                    android:padding="3sp"
                    android:text="@string/close"
                    android:textColor="@color/black_87"
                    android:textSize="@dimen/caption" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cvDate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_for_submit_result">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gray_border"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/iv1"
                    android:maxLines="1"
                    android:paddingRight="10dp"
                    android:text="@string/txt_date"
                    android:textColor="@color/black_87"
                    android:textSize="@dimen/body_1"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv1"
                    android:layout_width="32sp"
                    android:layout_height="32sp"
                    android:layout_centerVertical="true"
                    android:padding="6sp"
                    android:src="@drawable/calander_icon" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_for_submit_result"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvSingle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/txt_single"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etSingle"
                    android:layout_width="50sp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext"
                    android:inputType="number"
                    android:maxLength="1" />

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/tvPatti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/txt_patti"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etPatti"
                    android:layout_width="50sp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edittext"
                    android:inputType="number"
                    android:maxLength="3" />

            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/bSubmit"
        style="@style/buttonStyle"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/submit" />
</RelativeLayout>