<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardElevation="8dp">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/txt_admin_login"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/heading"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5sp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimaryDark" />

        <!--  <android.support.design.widget.TextInputLayout
              android:layout_width="200dp"
              android:layout_height="wrap_content"
              android:layout_gravity="center">-->

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_edittext"
            android:gravity="center_horizontal"
            android:hint="@string/txt_enter_password"
            android:inputType="numberPassword"
            android:maxLength="6" />

        <!--     </android.support.design.widget.TextInputLayout>-->

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bLogin"
            style="@style/buttonStyle"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/login" />


    </android.support.v7.widget.LinearLayoutCompat>


</android.support.v7.widget.CardView>
